@@ -58,8 +58,8 @@ GtkWidget *area = NULL;
 
 SKIN_INFOS skin_infos = { 0 };
 
+extern GdkPixbuf*	lcd_mem;
 extern GdkPixbuf*	lcd;
-extern GdkPixbuf*	skn;
 extern GdkPixmap*	pixmap;
 
 extern Pc2TiKey*    kbd_keymap;
@@ -70,7 +70,7 @@ extern const char	sknKey89[];
 extern uint32_t*	lcd_bytmap;
 
 extern LCD_INFOS	li;
-extern SCL_INFOS	si;
+extern float		sf;	// scaling factor
 
 extern LCD_RECT		ls;
 extern LCD_RECT		lr;
@@ -82,11 +82,11 @@ static void set_scale(int view_mode)
 {
 	if(view_mode == VIEW_NORMAL)
 	{
-		options.scale = si.r = 1.0;
+		options.scale = sf = 1.0;
 	}
 	else if(view_mode == VIEW_LARGE)
 	{
-		options.scale = si.r = 2.0;
+		options.scale = sf = 2.0;
 	}
 	else if(view_mode == VIEW_FULL)
 	{
@@ -94,12 +94,12 @@ static void set_scale(int view_mode)
 		gint sw = gdk_screen_get_width(screen);
 		gint sh = gdk_screen_get_height(screen);
 
-		si.r = (float)sw / lr.w;
-		si.r = (float)sh / lr.h;
-		//printf("%i %i %f\n", sw, lr.w, si.r);
-		//printf("%i %i %f\n", sh, lr.h, si.r);
+		sf = (float)sw / lr.w;
+		sf = (float)sh / lr.h;
+		//printf("%i %i %f\n", sw, lr.w, sf);
+		//printf("%i %i %f\n", sh, lr.h, sf);
 
-		options.scale = si.r = (float)1.0;	// restricted to 3.0, too CPU intensive !
+		options.scale = sf = (float)1.0;	// restricted to 3.0, too CPU intensive !
 	}
 }
 
@@ -107,10 +107,10 @@ static void set_scale(int view_mode)
 static void set_infos(void)	// set window & lcd sizes
 {
 	// LCD rectangle (source: skin)
-	ls.x = (int)(si.r * skin_infos.lcd_pos.left); 
-	ls.y = (int)(si.r * skin_infos.lcd_pos.top);
-	ls.w = (int)(si.r * tihw.lcd_w);
-	ls.h = (int)(si.r * tihw.lcd_h);
+	ls.x = (int)(sf * skin_infos.lcd_pos.left); 
+	ls.y = (int)(sf * skin_infos.lcd_pos.top);
+	ls.w = (int)(sf * tihw.lcd_w);
+	ls.h = (int)(sf * tihw.lcd_h);
 
 	// LCD rectangle (target: window)
 	if(options.skin) 
@@ -123,14 +123,14 @@ static void set_infos(void)	// set window & lcd sizes
 		lr.x = 0;
 		lr.y = 0;
 	}  
-	lr.w = (int)(si.r * tihw.lcd_w);
-	lr.h = (int)(si.r * tihw.lcd_h);
+	lr.w = (int)(sf * tihw.lcd_w);
+	lr.h = (int)(sf * tihw.lcd_h);
 
 
 	// SKN rectangle
 	sr.x = sr.y = 0;
-	sr.w = (int)(si.r * skin_infos.width);
-	sr.h = (int)(si.r * skin_infos.height);
+	sr.w = (int)(sf * skin_infos.width);
+	sr.h = (int)(sf * skin_infos.height);
 
 	// WND rectangle (= LCD or SKN depending on w/ or w/o skin)
 	wr.x = wr.y = 0;
@@ -291,7 +291,7 @@ on_drawingarea1_configure_event        (GtkWidget       *widget,
 		return FALSE;
 
 	// set scaling factor
-	options.scale = si.r = factor;
+	options.scale = sf = factor;
 	options.view = VIEW_CUSTOM;
 
 	// compute sizes
@@ -509,9 +509,6 @@ int  hid_init(void)
 	    g_free(s);
 	    return -1;
     }
-
-	// Allocate the skn pixbuf (if needed)
-	skn = skin_infos.image;
   
 	// Set skin keymap depending on calculator type
     switch(tihw.calc_type)
@@ -535,7 +532,7 @@ int  hid_init(void)
 	}
 
 	// Set window/LCD sizes
-	si.r = options.scale;
+	sf = options.scale;
 	set_scale(options.view);
 	set_infos();
 
@@ -543,8 +540,8 @@ int  hid_init(void)
 	lcd_bytmap = (uint32_t *)malloc(LCDMEM_W * LCDMEM_H);
 
     // Allocate the lcd pixbuf
-    lcd = gdk_pixbuf_new(GDK_COLORSPACE_RGB, FALSE, 8, LCDMEM_W, LCDMEM_H);
-    if(lcd == NULL)
+    lcd_mem = gdk_pixbuf_new(GDK_COLORSPACE_RGB, FALSE, 8, LCDMEM_W, LCDMEM_H);
+    if(lcd_mem == NULL)
     {
         gchar *s = g_strdup_printf("unable to create LCD pixbuf.\n");
 	    tiemu_error(0, s);
@@ -553,14 +550,14 @@ int  hid_init(void)
     }
 
 	// Used by TI89 (the LCD view is clipped from memory view)
-	si.l = gdk_pixbuf_new_subpixbuf(lcd, 0, 0, tihw.lcd_w, tihw.lcd_h);
+	lcd = gdk_pixbuf_new_subpixbuf(lcd_mem, 0, 0, tihw.lcd_w, tihw.lcd_h);
     
 	// Constants for LCD update (speed-up)
-    li.n_channels = gdk_pixbuf_get_n_channels (lcd);
-	li.width = gdk_pixbuf_get_width (lcd);
-	li.height = gdk_pixbuf_get_height (lcd);
-	li.rowstride = gdk_pixbuf_get_rowstride (lcd);
-	li.pixels = gdk_pixbuf_get_pixels (lcd);
+    li.n_channels = gdk_pixbuf_get_n_channels (lcd_mem);
+	li.width = gdk_pixbuf_get_width (lcd_mem);
+	li.height = gdk_pixbuf_get_height (lcd_mem);
+	li.rowstride = gdk_pixbuf_get_rowstride (lcd_mem);
+	li.pixels = gdk_pixbuf_get_pixels (lcd_mem);
 
 	// Create main window
 	display_main_wnd();
@@ -608,12 +605,12 @@ int  hid_exit(void)
     g_source_remove(tid);
 
 	// Release resources
-    if(lcd != NULL)
+    if(lcd_mem != NULL)
     {
-        g_object_unref(lcd);
-        lcd = NULL;
-		g_object_unref(si.l);
-		si.l = NULL;
+        g_object_unref(lcd_mem);
+        lcd_mem = NULL;
+		g_object_unref(lcd);
+		lcd = NULL;
     }
 
     if(pixmap != NULL)
@@ -751,7 +748,7 @@ int  hid_screenshot(char *filename)
 	else if((options2.size == IMG_LCD) && (options2.type == IMG_COL)) 
 	{
         // get pixbuf from grayscale lcd
-		pixbuf = gdk_pixbuf_copy(si.l);
+		pixbuf = gdk_pixbuf_copy(lcd);
 	} 
 	else if((options2.size == IMG_SKIN) && (options2.type == IMG_COL))
 	{
